started on parsing the json result
Made code/search.php way less messy. Added a buch of private and a few
public functions to code/spotifyAPI.
Disabled space escaping in info.plist

--- a/info.plist
+++ b/info.plist
@@ -14,7 +14,7 @@ echo $LINK;</string>
 	<key>escapedollar</key>
 	<true/>
 	<key>escapequery</key>
-	<true/>
+	<false/>
 	<key>escapequerybackquotes</key>
 	<true/>
 	<key>escapequerybrackets</key>
